tests/shouldPass/process-no_parameters.bc
//EXPECTED BEHAVIOUR:
//proc should do actions 1-3

//WHAT IT TESTS:
// -you should be able to have a process with no parameters

//definitions
proc[] = {action1, 1}.{action2, 1}.{action3, 1};


//system line
proc[];
